[tool.poetry]
name = "mybot"
version = "0.0.0"
description = ""
authors = ["Sasha-nice <borisov.al.an@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.3.0"
envparse = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
