[tool.poetry]
name = "mybot"
version = "0.0.0"
description = ""
authors = ["Sasha-nice <borisov.al.an@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.3.0"
envparse = "^0.2.0"
black = "^23.12.1"
isort = "^5.13.2"
ruff = "^0.1.11"
aiohttp = "^3.9.1"
pydantic = "^2.5.3"
mypy = "^1.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
